--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     }
   },
   "dependencies": {
+    "nativescript-admob": "^1.3.0",
     "nativescript-background-http": "^2.4.2",
+    "nativescript-google-analytics": "^0.3.5",
     "nativescript-imagecropper": "0.0.7",
     "nativescript-imagepicker": "^2.4.1",
     "nativescript-loading-indicator": "^2.2.2",
