--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nativescript-loading-indicator": "^2.2.2",
     "nativescript-oauth": "^1.2.1",
     "nativescript-permissions": "^1.2.3",
+    "nativescript-pulltorefresh": "^1.1.10",
     "nativescript-radiobutton": "^0.1.0",
     "nativescript-telerik-ui": "^1.5.1",
     "nativescript-theme-core": "^0.2.1",
