--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "nativescript-admob": "^1.3.0",
     "nativescript-background-http": "^2.4.2",
+    "nativescript-fonticon": "^1.1.1",
     "nativescript-google-analytics": "^0.3.5",
     "nativescript-imagecropper": "0.0.7",
     "nativescript-imagepicker": "^2.4.1",
